# VMP

./: .clang-format  .gitignore  README.md  shell.nix
.github/workflows/: book.yaml  ci.yaml
Daemons/vmpserverd/: README.md  config.h.in  config.plist.in  meson.build
Daemons/vmpserverd/docs/: property-lists.md
Daemons/vmpserverd/profiles/: com.hugomelder.software.plist  com.hugomelder.vaapi.plist
Daemons/vmpserverd/src/: NSRunLoop+blockExecution.h  NSRunLoop+blockExecution.m  NSString+substituteVariables.h  NSString+substituteVariables.m  VMPCalEvent.h  VMPCalEvent.m  VMPCalSync.h  VMPCalSync.m  VMPCalendarSync.h  VMPCalendarSync.m  VMPErrors.h  VMPErrors.m  VMPJournal.h  VMPJournal.m  VMPPipelineManager.h  VMPPipelineManager.m  VMPProfileManager.m  VMPPropertyListProtocol.h  VMPRTSPServer.h  VMPRTSPServer.m  VMPRecordingManager.h  VMPRecordingManager.m  VMPServerMain.h  VMPServerMain.m  VMPUdevClient.h  VMPUdevClient.m  main.m
Daemons/vmpserverd/src/models/: VMPConfigChannelModel.h  VMPConfigChannelModel.m  VMPConfigModel.h  VMPConfigModel.m  VMPConfigMountpointModel.h  VMPConfigMountpointModel.m  VMPElementModel.h  VMPElementModel.m  VMPModelCommon.h  VMPPadModel.h  VMPPadModel.m  VMPProfileModel.h  VMPProfileModel.m
Demo/: README.md
Demo/CompositingPipeline/: splitview_smp_1080p.sh  splitview_smp_720p.sh
Demo/InterPipelineCommunication/: README.md  gst_intervideo_rtsp_test.c  gst_intervideo_test.c  gst_intervideo_udp_test.c
Demo/LoggingHandler/: README.md  gst_bus_logger.c
Demo/NVCompositingPipeline/: README.md  example.sh  hw-comp-simple.sh  hw-simple.sh  multi-channel.sh
Demo/PipelineRecovery/: README.md  meson.build  v4l2_pipeline_recovery.c
Demo/RTSPServer/: Makefile  rtsp-server.c
Deployment/: README.md  bookworm-amd64.json  setup.sh
Deployment/payload/root/: post-install.sh
Documenation/: book.md
Documentation/: Makefile  README.md  book.md
Documentation/Templates/: blauwal.tex
Libraries/CalendarKit/: README.md  meson.build
Libraries/CalendarKit/CalendarKit/: CalendarKit.h  ICALCalendar.h  ICALComponent.h  ICALError.h  ICALEvent.h  ICALParameter.h  ICALProperty.h  ICALTimeZone.h
Libraries/CalendarKit/Source/: ICALCalendar.m  ICALComponent+Private.h  ICALComponent.m  ICALError.m  ICALEvent.m  ICALParameter+Private.h  ICALParameter.m  ICALParser.h  ICALParser.m  ICALProperty+Private.h  ICALProperty.m  ICALTimeZone.m
Libraries/CalendarKit/Tests/: calendars.h  equality.m  lineUnfolding.m  main.h  main.m  meson.build  parsing.m  time.m  tokenization.m
Libraries/MicroHTTPKit/: meson.build
Libraries/MicroHTTPKit/MicroHTTPKit/: HKHTTPConstants.h  HKHTTPRequest.h  HKHTTPResponse.h  HKHTTPServer.h  HKRouter.h  MicroHTTPKit.h
Libraries/MicroHTTPKit/Source/: HKHTTPConstants.m  HKHTTPRequest+Private.h  HKHTTPRequest+Private.m  HKHTTPRequest.m  HKHTTPResponse.m  HKHTTPServer.m  HKRouter.m
Libraries/MicroHTTPKit/Tests/: main.h  main.m  meson.build  routing.m
OpenAPI/RemoteControlAPI/: README.md
OpenAPI/RemoteControlAPI/components/examples/: StatusDefaultResponse.yaml
OpenAPI/RemoteControlAPI/components/schemas/: Element.yaml  Pipeline.yaml  PipelineSelection.yaml  StatusResponse.yaml
OpenAPI/RemoteControlAPI/paths/: V1Status.yaml
VMPServer/: .clang-format  config-loopback.plist  config.h.in  config.sample.plist  meson.build
VMPServer/src/: VMPErrors.m  VMPGMediaFactory.h  VMPHTTPServer.h  VMPHTTPServer.m  VMPJournal.h  VMPJournal.m  VMPPipelineManager.h  VMPPipelineManager.m  VMPRTSPServer.m  VMPServerMain.h  VMPServerMain.m  VMPUdevClient.m  main.m
nix/: calendarkit.nix  libdispatch.nix  microhttpkit.nix  overlay.nix  vmpserverd.nix  xctest.nix
vmp-http-spec/: README.md  index.yml  openapi.yaml  spec.json
vmp-http-spec/components/examples/: BinDefaultNotFoundResponse.yaml  BinDefaultResponse.yaml  DefaultUnauthorizedResponse.yaml  UserLoginDefaultNotFoundResponse.yaml  UserLoginDefaultRequest.yaml  UserLoginDefaultResponse.yaml  _index.yml
vmp-http-spec/components/parameters/: _index.yml
vmp-http-spec/components/schemas/: ErrorResponse.yml  GenericError.yaml  KeyValue.yaml  LoginRequest.yml  LoginResponse.yml  Pad.yaml  PipelineItem.yaml  PipelineListResponse.yaml  PipelineSelection.yaml  UserLoginRequest.yaml  UserLoginResponse.yaml  _index.yml
vmp-http-spec/paths/: V1Bin.yaml  V1Pipelines.yaml  V1UserLogin.yaml  _index.yml
vmp-http-spec/paths/user/: login.yml
vmp-server/: .clang-format  README.md  config.sample.plist  meson.build
vmp-server/src/: VMPErrors.h  VMPGMediaFactory.c  VMPPipelineManager.h  VMPPipelineManager.m  VMPRTSPServer.h  VMPRTSPServer.m  VMPServerMain.h  VMPServerMain.m  VMPUdevClient.h  VMPUdevClient.m  main.c  main.m  vmp-combined-bin.c  vmp-combined-bin.h  vmp-common.c  vmp-common.h  vmp-error.c  vmp-error.h  vmp-media-factory.c  vmp-media-factory.h  vmp-pipeline-config.c  vmp-pipeline-config.h  vmp-pipeline-manager.c  vmp-pipeline-manager.h  vmp-video-config.c  vmp-video-config.h  vmp-video-configuration.c  vmp-video-configuration.h
vmpctl/: README.md  meson.build
vmpctl/src/: VMPRemoteConnection.h  main.m
vmpserverd/: README.md  config.h.in  config.sample.plist  config.test.plist  meson.build  vmpserverd.1  vmpserverd.service.in
vmpserverd/docs/: configuration.md
vmpserverd/profiles/: com.hugomelder.deepstream-6.plist  com.hugomelder.deepstream6.plist  com.hugomelder.software.plist  com.hugomelder.vaapi.plist
vmpserverd/src/: NSString+substituteVariables.m  VMPBinDataHarness.h  VMPErrors.h  VMPGMediaFactory.c  VMPGVideoConfig.c  VMPGVideoConfig.h  VMPHTTPServer.h  VMPHTTPServer.m  VMPJournal.h  VMPJournal.m  VMPPipelineManager.h  VMPPipelineManager.m  VMPProfile.h  VMPProfile.m  VMPProfileManager.h  VMPProfileManager.m  VMPPropertyListProtocol.h  VMPRTSPServer.h  VMPRTSPServer.m  VMPServerMain.h  VMPServerMain.m  main.m
vmpserverd/src/models/: VMPConfigChannelModel.h  VMPConfigChannelModel.m  VMPConfigModel.h  VMPConfigModel.m  VMPConfigMountpointModel.h  VMPElementModel.h  VMPElementModel.m  VMPModelCommon.h  VMPPadModel.h  VMPProfileModel.h  VMPProfileModel.m
(+4 files in other folders)
